<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linerLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/classes" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sid" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rela1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linerLayout1">

        <Button
            android:id="@+id/btn_add_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="13dp"
            android:text="@string/addDate" />

        <Button
            android:id="@+id/btn_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_toRightOf="@id/btn_add_data"
            android:text="@string/showAll" />

        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_toRightOf="@id/btn_show_all"
            android:text="@string/clearAll" />

        <Button
            android:id="@+id/btn_del_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_toRightOf="@id/btn_clear_all"
            android:text="@string/delAll" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_add_data"
            android:id="@+id/linerLayout2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textVie4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_del_by_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editText4"
                android:text="@string/delById" />

            <Button
                android:id="@+id/btn_select_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_del_by_id"
                android:text="@string/selectById" />

            <Button
                android:id="@+id/btn_update_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_select_id"
                android:text="@string/updateByID" />
        </LinearLayout>


    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_below="@id/rela1"
        android:layout_height="wrap_content"/>

</RelativeLayout>